// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should render is correctly if user already authorization 1`] = `
<header
  className="header"
>
  <div
    className="container"
  >
    <div
      className="header__wrapper"
    >
      <div
        className="header__left"
      >
        <Link
          className="header__logo-link header__logo-link--active"
          to="/"
        >
          <img
            alt="6 cities logo"
            className="header__logo"
            height="41"
            src="/img/logo.svg"
            width="81"
          />
        </Link>
      </div>
      <nav
        className="header__nav"
      >
        <ul
          className="header__nav-list"
        >
          <li
            className="header__nav-item user"
          >
            <Link
              className="header__nav-link header__nav-link--profile"
              to="/favorite"
            >
              <div
                className="header__avatar-wrapper user__avatar-wrapper"
                style={
                  Object {
                    "backgroundImage": "url(https://htmlacademy-react-2.appspot.com/six-citiesstatic/avatar/10.jpg)",
                  }
                }
              />
              <span
                className="header__user-name user__name"
              >
                Shramko.web@yahoo.com
              </span>
            </Link>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</header>
`;

exports[`Header component should render is correctly if user require authorization 1`] = `
<header
  className="header"
>
  <div
    className="container"
  >
    <div
      className="header__wrapper"
    >
      <div
        className="header__left"
      >
        <Link
          className="header__logo-link header__logo-link--active"
          to="/"
        >
          <img
            alt="6 cities logo"
            className="header__logo"
            height="41"
            src="/img/logo.svg"
            width="81"
          />
        </Link>
      </div>
      <nav
        className="header__nav"
      >
        <ul
          className="header__nav-list"
        >
          <li
            className="header__nav-item user"
          >
            <Link
              className="header__nav-link header__nav-link--profile"
              to="/login"
            >
              <div
                className="header__avatar-wrapper user__avatar-wrapper"
                style={Object {}}
              />
              <span
                className="header__user-name user__name"
              >
                Sign In
              </span>
            </Link>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</header>
`;
